<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_close"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:layout_marginBottom="50dp"
        android:text="Cerrar" />
    <ImageView
        android:id="@+id/calculator_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/icon_calculator"
        android:src="@drawable/calculator" />

    <EditText
        android:id="@+id/text_edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/placeholder_number1"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/text_edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/placeholder_number2"
        android:inputType="number"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/text_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:ems="10"

        android:textAlignment="viewStart"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="10dp"
                android:backgroundTint="@color/plus_color"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/button_minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="10dp"
                android:backgroundTint="@color/minus_color"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_multiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="10dp"
                android:backgroundTint="@color/multiply_color"
                android:text="@string/multiply"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/button_division"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="10dp"
                android:backgroundTint="@color/division_color"
                android:text="@string/division"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>